Added evn variables

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 CLOUD_NAME=emmymighty
 CLOUDINARY_API_KEY=237413553651322
 CLOUDINARY_API_SECRET=RJMBkBHxDBeO5j0dnKCB_jih5W0
+
+BASE_URL=http://localhost:3001/api/
