Made env active

--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ CLOUDINARY_API_KEY=237413553651322
 CLOUDINARY_API_SECRET=RJMBkBHxDBeO5j0dnKCB_jih5W0
 
 BASE_URL=http://localhost:3001/api/
+
+AUTH_USER=mightymilan04
+AUTH_PASS=march041992
+
+MONGO_PASS=M%40rch041992M
